--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -52,14 +52,11 @@ body {
     background: #FAFBFC;
     border-color: #FAFBFC;
     color: #24292E;
-    border-style: outset;
-    height: 35px;
-    width: 100px;
-    font: bold15px arial, sans-serif;
-    text-shadow: none;
-    text-decoration:none;
+    height: 70px;
+    width: 200px;
+    font-family: 'Arial', sans-serif;
     border: 2px solid rgba(27, 31, 35, 0.15);
-    border-radius: 6px;          
+    border-radius: 12px;          
 }
 .profile{
     width: 280px;
